src/test/snapshots/cargo_verset__test__cargo_verset-package.snap
---
source: src/test/mod.rs
expression: help_text
---
Set the version of the package in a Cargo.toml file

Usage: package [OPTIONS] --ver <VER>

Options:
  -v, --ver <VER>
          Version to set in the workspace

  -p, --path <PATH>
          Path to the directory containing the Cargo.toml file

  -d, --dry-run
          Run the program without making any changes

  -h, --help
          Print help

  -V, --version
          Print version
