src/test/snapshots/cargo_verset__test__cargo_verset.snap
---
source: src/test/mod.rs
expression: help_text
---
A cargo plugin to change the version of a package in the Cargo.toml file

Usage: cargo_verset <COMMAND>

Commands:
  package     Set the version of the package in a Cargo.toml file
  dependency  Set the version of a dependency in a Cargo.toml file
  help        Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help

  -V, --version
          Print version
